Fix: MT-1281 better contrast on selected form field error

--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -50,7 +50,6 @@
     &:focus {
       border-color: var(--color-error);
       outline: none;
-      box-shadow: 0 0 0 0.25rem $error-focus-color;
     }
   }
 }
